WTF::WeakPtr should rename 'forgot' to 'clear' and support nullptr assignment https://bugs.webkit.org/show_bug.cgi?id=141935

Reviewed by Myles C. Maxfield.

Source/WTF:

* wtf/WeakPtr.h:
(WTF::WeakPtr::operator=): Added 'nullptr_t' overload.
(WTF::WeakPtr::clear): Renamed from 'forget'
(WTF::WeakPtr::forget): Deleted.

Tools:

* TestWebKitAPI/Tests/WTF/WeakPtr.cpp:
(TestWebKitAPI::TEST): Updated for 'clear' method rename, and added a few
tests for assigning from nullptr.


Canonical link: https://commits.webkit.org/159956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180535 268f45cc-cd09-0410-ab3c-d52691b4dbfc